[package]
name = "rust-workshop"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
notify-rust = "4.7"
regex = "1.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.1"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }